write first queries and strategy

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -23,6 +24,7 @@
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.2.0",
     "prisma": "^5.22.0"
   }
 }
